--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ajv": "^4.7.7",
     "apex.js": "^2.0.0",
     "aws-sdk": "^2.6.6",
+    "braintree": "^1.42.0",
     "firebase": "^3.4.1",
     "firebase-get": "github:jemmyw/firebase-get",
     "kinesis": "^1.2.2",
