Create engagements notifications service
This adds notification records when the engagement is accepted or confirmed

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ava \"**/*test.js\""
+    "test": "ava \"**/*test.js\"",
+    "test:watch": "ava \"**/*test.js\" -w"
   },
   "author": "",
   "license": "ISC",
