--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "ava": "^0.16.0",
     "aws-sdk-mock": "^1.5.0",
+    "babel-cli": "^6.16.0",
     "browserify": "^13.1.0",
+    "exorcist": "^0.4.0",
     "sinon": "^1.17.6",
     "typescript": "^2.0.3",
     "typings": "^1.4.0"
