--- a/bin/build
+++ b/bin/build
@@ -1,27 +1,27 @@
-#!/bin/sh
+#!/bin/bash
 
-FN_DIR=$(pwd)
-cd ../..
+FUNCS=$(ls functions)
+MFUNCS=()
 
-rm $FN_DIR/*.js $FN_DIR/*.map || true
+for m in $FUNCS; do
+    ZIP="dist/$m.zip"
+    if [ ! -e "${ZIP}" ]; then
+        MFUNCS+=($m)
+    else
+        F=$(find functions/$m -type f \( -iname '*.ts' -o -iname '*.json' \) -newer $ZIP)
+        if [ -n "$F" ]; then
+            echo "Changes in $m"
+            MFUNCS+=($m)
+        fi
+    fi
+done
 
-echo "[Build] typscript"
-tsc
+if [ -n "$MFUNCS" ]; then
+    echo "[BUILD] typescript"
+    tsc
 
-echo "[Build] browserify"
-browserify --debug --node -s default -t babelify $FN_DIR/index.js \
-    | exorcist $FN_DIR/bundle.js.map > $FN_DIR/bundle.js
-
-echo "[Build] babel"
-babel \
-    --no-babelrc \
-    --no-comments \
-    --minified \
-    --compact true \
-    --input-source-map $FN_DIR/bundle.js.map \
-    --inputSourceMap=$FN_DIR/bundle.js.map \
-    --source-maps inline \
-    $FN_DIR/bundle.js \
-    | exorcist $FN_DIR/main.js.map > $FN_DIR/main.js
-
-rm $FN_DIR/bundle.js $FN_DIR/index.js || true
+    echo "[BUILD] apex"
+    parallel --no-notice --bar apex build {} '>' dist/{}.zip ::: "${MFUNCS[@]}"
+else
+    echo "No changes"
+fi
