--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "target": "ES5",
     "module": "commonjs",
     "sourceMap": true
   }
