--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "ava": "^0.16.0",
     "aws-sdk-mock": "^1.5.0",
     "babel-cli": "^6.16.0",
+    "babel-preset-es2016": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "exorcist": "^0.4.0",
     "sinon": "^1.17.6",
-    "typescript": "^2.0.3",
+    "typescript": "2.1.0-dev.20161025",
     "typings": "^1.4.0"
   },
   "dependencies": {
