--- a/project.json
+++ b/project.json
@@ -9,6 +9,6 @@
   "handler": "main.default",
   "hooks": {
     "build": "../../bin/build_function `pwd`",
-    "clean": "rm main.js main.js.map"
+    "clean": "rm main.js main.js.map credentials.json"
   }
 }
