--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^13.1.0",
     "exorcist": "^0.4.0",
     "sinon": "^1.17.6",
+    "source-map": "^0.5.6",
     "typescript": "2.1.0-dev.20161025",
     "typings": "^1.4.0"
   },
