--- a/project.json
+++ b/project.json
@@ -7,6 +7,7 @@
   "environment": {},
   "runtime": "nodejs4.3",
   "hooks": {
-    "build": "../../bin/build"
+    "build": "../../bin/build",
+    "clean": "rm main.js"
   }
 }
