--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "ava": "^0.16.0",
     "aws-sdk-mock": "^1.5.0",
     "babel-cli": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
+    "babel-runtime": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "cli-color": "^1.1.0",
     "exorcist": "^0.4.0",
+    "glob": "^7.1.1",
     "sinon": "^1.17.6",
     "source-map": "^0.5.6",
-    "typescript": "2.1.0-dev.20161025",
+    "typescript": "2.0.3",
     "typings": "^1.4.0"
   },
   "dependencies": {
