Add invoker program that listens to kafka topics and invokes lambda functions

--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "apex.js": "^2.0.0",
     "aws-sdk": "^2.6.6",
     "braintree": "^1.42.0",
+    "farmhash": "^1.2.1",
     "firebase": "^3.4.1",
     "firebase-get": "github:jemmyw/firebase-get",
     "kinesis": "^1.2.2",
     "kinesis-readable": "^1.0.0",
+    "minimatch": "^3.0.3",
+    "no-kafka": "^2.9.2",
     "node-uuid": "^1.4.7",
     "ramda": "^0.22.1",
     "sendgrid": "^4.7.0",
