--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "ava \"**/*test.js\"",
-    "test:watch": "ava \"**/*test.js\" -w"
+    "test:watch": "ava \"**/*test.js\" -w",
+    "build:invoker": "eval $(aws ecr get-login --region=us-west-2) && V=v$(git rev-parse --short HEAD); docker build -t 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker:${V} .; docker push 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker:${V}"
   },
   "author": "",
   "license": "ISC",
@@ -42,9 +43,11 @@
     "no-kafka": "^2.9.2",
     "node-uuid": "^1.4.7",
     "ramda": "^0.22.1",
-    "sendgrid": "^4.7.0",
+    "sendgrid": "4.7.0",
     "source-map-support": "^0.4.3",
     "sparks-schemas": "github:sparksnetwork/schemas",
-    "unique-stream": "^2.2.1"
+    "unique-stream": "^2.2.1",
+    "winston": "^2.2.0",
+    "winston-cloudwatch": "^1.6.0"
   }
 }
