--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:watch": "ava \"**/*test.js\" -w",
     "build": "node_modules/.bin/tsc",
     "build:invoker": "eval $(aws ecr get-login --region=us-west-2) && V=v$(git rev-parse --short HEAD); docker build -t 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker:${V} .; docker push 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker:${V}",
-    "deploy:invoker": "node bin/deploy_invoker.js"
+    "deploy:invoker": "node bin/ecs_deploy.js dispatch invoker 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker"
   },
   "author": "",
   "license": "ISC",
