--- a/package.json
+++ b/package.json
@@ -41,15 +41,11 @@
     "firebase-get": "github:jemmyw/firebase-get",
     "kinesis": "^1.2.2",
     "kinesis-readable": "^1.0.0",
-    "minimatch": "^3.0.3",
-    "no-kafka": "^2.9.2",
     "node-uuid": "^1.4.7",
     "ramda": "^0.22.1",
     "sendgrid": "4.7.0",
     "source-map-support": "^0.4.3",
     "sparks-schemas": "github:sparksnetwork/schemas",
-    "unique-stream": "^2.2.1",
-    "winston": "^2.2.0",
-    "winston-cloudwatch": "^1.6.0"
+    "unique-stream": "^2.2.1"
   }
 }
