feat: Program for running locally

--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
     "babel-runtime": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "byline": "^5.0.0",
     "cli-color": "^1.1.0",
+    "dockerode": "^2.3.1",
+    "execa": "^0.5.0",
     "exorcist": "^0.4.0",
     "glob": "^7.1.1",
+    "got": "^6.6.1",
+    "listr": "^0.7.0",
+    "ora": "^0.3.0",
+    "rxjs": "^5.0.0-rc.2",
     "sinon": "^1.17.6",
     "source-map": "^0.5.6",
     "typescript": "2.0.3",
@@ -35,6 +42,7 @@
     "ajv": "^4.7.7",
     "apex.js": "^2.0.0",
     "aws-sdk": "^2.6.6",
+    "bluebird": "^3.4.6",
     "braintree": "^1.42.0",
     "farmhash": "^1.2.1",
     "firebase": "^3.4.1",
