--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,7 @@ deployment:
   production:
     branch: master
     commands:
-      - curl https://raw.githubusercontent.com/apex/apex/master/install.sh | sh
+      - curl -L https://github.com/apex/apex/releases/download/v0.10.3/apex_linux_amd64 > /home/ubuntu/bin/apex
       - wget https://releases.hashicorp.com/terraform/0.6.8/terraform_0.6.8_linux_amd64.zip
       - unzip terraform_0.6.8_linux_amd64.zip -d terraform
       - "PATH=./terraform:$PATH bin/deploy"
