--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:watch": "ava \"**/*test.js\" -w",
     "build": "node_modules/.bin/tsc",
     "build:invoker": "eval $(aws ecr get-login --region=us-west-2) && V=v$(git rev-parse --short HEAD); docker build -t 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker:${V} .; docker push 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker:${V}",
-    "deploy:invoker": "node bin/ecs_deploy.js dispatch invoker 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker"
+    "deploy:invoker": "node bin/ecs_deploy.js dispatch invoker 878160042194.dkr.ecr.us-west-2.amazonaws.com/invoker",
+    "local": "npm run build && node bin/local.js"
   },
   "author": "",
   "license": "ISC",
@@ -39,7 +40,7 @@
     "typings": "^1.4.0"
   },
   "dependencies": {
-    "ajv": "^4.7.7",
+    "ajv": "^4.9.0",
     "apex.js": "^2.0.0",
     "aws-sdk": "^2.7.5",
     "bluebird": "^3.4.6",
