--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "ajv": "^4.9.0",
     "apex.js": "^2.0.0",
+    "async": "^2.1.2",
     "aws-sdk": "^2.7.5",
     "bluebird": "^3.4.6",
     "braintree": "^1.42.0",
