--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^6.0.48",
-    "async": "^2.1.2",
+    "async": "2.1.4",
     "ava": "^0.17.0",
-    "aws-sdk-mock": "^1.5.0",
+    "aws-sdk-mock": "1.6.1",
     "babel-cli": "^6.16.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
@@ -42,8 +42,7 @@
   "dependencies": {
     "ajv": "^4.9.0",
     "apex.js": "^2.0.0",
-    "async": "^2.1.2",
-    "aws-sdk": "^2.7.5",
+    "aws-sdk": "2.7.9",
     "bluebird": "^3.4.6",
     "braintree": "^1.42.0",
     "farmhash": "^1.2.1",
