--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "async": "2.1.4",
     "ava": "^0.17.0",
     "aws-sdk-mock": "1.6.1",
-    "babel-cli": "^6.16.0",
+    "babel-cli": "6.18.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-runtime": "^6.18.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
+    "browserify": "13.1.1",
     "byline": "^5.0.0",
     "cli-color": "^1.1.0",
     "dockerode": "^2.3.1",
