Feat: Started adding dispatch directly to services

--- a/package.json
+++ b/package.json
@@ -36,19 +36,22 @@
     "ora": "^0.3.0",
     "sinon": "^1.17.6",
     "source-map": "^0.5.6",
+    "ts-node": "^2.0.0",
     "typescript": "2.0.3",
     "typings": "^1.4.0"
   },
   "dependencies": {
+    "@sparksnetwork/sparks-dispatch": "^1.0.12",
     "@sparksnetwork/sparks-schemas": "^2.1.9",
     "ajv": "^4.9.0",
     "apex.js": "^2.0.0",
     "aws-sdk": "2.7.9",
     "bluebird": "^3.4.6",
-    "braintree": "^1.42.0",
+    "braintree": "^1.46.0",
     "farmhash": "^1.2.1",
     "firebase": "^3.6.2",
     "firebase-get": "github:jemmyw/firebase-get",
+    "firebase-queue": "^1.6.1",
     "kinesis": "^1.2.2",
     "kinesis-readable": "^1.0.0",
     "node-uuid": "^1.4.7",
